--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,10 +10,10 @@
         <div class="span2">
             <form class="well">
                 <label for="source">Source</label>
-                <input class="span2" id="source" type="text" value="274071538">
+                <input class="span2" id="source" type="text" value="271474885">
                 <label for="destination">Destination</label>
-                <input class="span2" id="destination" type="text" value="274109999">
-                <button class="btn" id="retrieveDirections">Retrieve directions</button>
+                <input class="span2" id="destination" type="text" value="1514366845">
+                <button class="btn" id="retrieveDirections" type="button">Retrieve directions</button>
             </form>
             <div class="well">
                 <h3>Directions</h3>
@@ -26,7 +26,7 @@
         </div>
     </div>
 </div>
-<script src="/classpath/jquery.js" type="text/javascript"></script>
+<script src="/scripts/jquery-1.7.1.js"></script>
 <script src="/scripts/openlayers/OpenLayers.js"></script>
 <script src="/scripts/script.js"></script>
 </body>
