Änderung der Weg-Geschwindigkeit im Backend implementiert. Nach der Änderung der Weg-Geschwindigkeit wird der Weg und seine Daten neugeladen. Verwendung von RequireJS und underscore.js

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -78,9 +78,7 @@
         </div>
     </div>
 </div>
-<script src="/scripts/jquery-1.7.1.js"></script>
-<script src="/scripts/openlayers/OpenLayers.js"></script>
-<script src="/scripts/script.js"></script>
+<script data-main="scripts/script" src="scripts/require-jquery.js"></script>
 </body>
 </html>
 <head>
