Code für die Darstellung auskommentiert, mehr Platz für die Karte

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,8 @@
 </div>
 <div class="container-fluid">
     <div class="row-fluid">
-        <div class="span2">
+<!--
+        <div class="span2" style="display: none;">
             <form class="well">
                 <label for="source">Source</label>
                 <input class="span2" id="source" type="text" value="17479069">
@@ -23,12 +24,13 @@
                 <input class="span2" id="destination" type="text" value="705531295">
                 <button class="btn" id="retrieveDirections" type="button">Retrieve directions</button>
             </form>
-            <div class="well" style="display: none;">
+            <div class="well">
                 <h3>Directions</h3>
                 <div id="directions"></div>
             </div>
         </div>
-        <div class="span8">
+-->
+        <div class="span10">
             <div id="map" style="height: 600px;"></div>
         </div>
         <div class="span2">
