Pfad-Aktualisierungen werden sofort per Comet an den Browser übermittelt.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -76,6 +76,7 @@
             </div>
         </div>
     </div>
+    <div data-lift="AddCometActor"></div>
 </div>
 <script data-main="scripts/script" src="scripts/require-jquery.js"></script>
 </body>
