Element für eine Fehlermeldung hinzugefügt

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,6 +15,10 @@
     </div>
 </div>
 <div class="container-fluid">
+    <div class="alert alert-block alert-error hide" id="error">
+      <h3 class="alert-heading">Error</h3>
+      <p></p>
+    </div>
     <div class="row-fluid">
         <div class="span10">
             <div id="map"></div>
