--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -4,7 +4,7 @@
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
     <title><span class="lift:Menu.title">code:app:0.1-SNAPSHOT</span></title>
-    <script id="jquery" src="/classpath/jquery.js" type="text/javascript"/>
+    <script id="jquery" src="/scripts/jquery-1.7.2.min.js" type="text/javascript"></script>
 </head>
 <body>
 <div class="lift:Menu.builder"/>
