--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,6 +25,19 @@
     </div>
     <div class="span2">
       <div class="well well-small">
+        <h2>Path</h2>
+        <table class="table table-bordered table-condensed table-striped">
+          <tr>
+            <td>Length</td>
+            <td id="pathLength"></td>
+          </tr>
+          <tr>
+            <td>Trip time</td>
+            <td id="pathTripTime"></td>
+          </tr>
+        </table>
+      </div>
+      <div class="well well-small">
         <h2>Node</h2>
         <table class="table table-bordered table-condensed table-striped">
           <tr>
