Statistiken um Anzahl der Ameisen, die aus dem System entfernt wurden, ergänzt.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -110,9 +110,15 @@
       </div>
     </div>
     <div class="tab-pane" id="tab2">
-      Launched ants: <span id="launched-ants"></span>
-      <br>
-      Destination reached ants: <span id="destination-reached-ants"></span>
+      <div class="well">
+        Launched ants: <span id="launched-ants"></span>
+        <br>
+        Destination reached ants: <span id="destination-reached-ants"></span>
+        <br>
+        Dead end street reached ants: <span id="dead-end-street-reached-ants"></span>
+        <br>
+        Max age exceeded ants: <span id="max-age-exceeded-ants"></span>
+      </div>
     </div>
   </div>
 </div>
