Statistik um durchschnittliche Zeiten zum Auswählen des nächsten Knotens und zum Aktualisieren der Knoten-Datenstrukturen erweitert.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -118,6 +118,10 @@
         Dead end street reached ants: <span id="dead-end-street-reached-ants"></span>
         <br>
         Max age exceeded ants: <span id="max-age-exceeded-ants"></span>
+        <br>
+        Select next node duration: <span id="select-next-node-duration"></span> ms
+        <br>
+        Update data structures duration: <span id="update-data-structures-duration"></span> ms
       </div>
     </div>
   </div>
