AddCometActor in AddOpenLayersActor umbenannt.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -126,7 +126,7 @@
     </div>
   </div>
 </div>
-<div data-lift="AddCometActor"></div>
+<div data-lift="AddOpenLayersActor"></div>
 <div data-lift="AddStatisticsActor"></div>
 <script data-main="scripts/script" src="scripts/require-jquery.js"></script>
 </body>
