--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -122,6 +122,8 @@
         Select next node duration: <span id="select-next-node-duration"></span> ms
         <br>
         Update data structures duration: <span id="update-data-structures-duration"></span> ms
+        <br>
+        Launch ants duration: <span id="launch-ants-duration"></span> ms
       </div>
     </div>
   </div>
