Statistik um die Zeit erweitert, die für die Verarbeitung einer Ameise benötigt wird.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -145,6 +145,10 @@
         <br>
         Launch ants duration: <span id="launch-ants-duration"></span> ms
       </div>
+      <div class="span6 well">
+        <h1>Ant nodes</h1>
+        Process ant duration: <span id="process-ant-duration"></span> ms
+      </div>
     </div>
   </div>
 </div>
