Statistik um das durchschnittliche Ameisen-Alter und die durchschnittliche Anzahl der verarbeiteten Ameisen erweitert.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -139,15 +139,19 @@
             <td id="total-max-age-exceeded-ants"></td>
           </tr>
         </table>
+        Mean age: <span id="ant-age"></span> s
+        <br>
         Select next node duration: <span id="select-next-node-duration"></span> ms
-        <br>
-        Update data structures duration: <span id="update-data-structures-duration"></span> ms
-        <br>
-        Launch ants duration: <span id="launch-ants-duration"></span> ms
       </div>
       <div class="span6 well">
-        <h1>Ant nodes</h1>
+        <h1>Nodes</h1>
+        Launch ants duration: <span id="launch-ants-duration"></span> ms
+        <br>
+        Processed ants per second: <span id="processed-ants"></span>
+        <br>
         Process ant duration: <span id="process-ant-duration"></span> ms
+        <br>
+        Update data structures duration: <span id="update-data-structures-duration"></span> ms
       </div>
     </div>
   </div>
