Pfad-Angaben auf zwei Nachkommastellen gerundet und mit Einheiten versehen.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -35,11 +35,11 @@
             <table class="table table-bordered table-condensed table-striped">
               <tr>
                 <td>Length</td>
-                <td id="pathLength"></td>
+                <td><span id="pathLength"></span> m</td>
               </tr>
               <tr>
                 <td>Trip time</td>
-                <td id="pathTripTime"></td>
+                <td><span id="pathTripTime"></span> s</td>
               </tr>
             </table>
           </div>
