Leaflet-Dateien hinzugefügt und erste Umstellungen im Skript vorgenommen.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,6 +3,10 @@
   <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
   <title>AntScout</title>
   <link rel="stylesheet" href="/css/bootstrap.css">
+  <link rel="stylesheet" href="/css/leaflet.css" />
+   <!--[if lte IE 8]>
+     <link rel="stylesheet" href="/css/leaflet.ie.css" />
+   <![endif]-->
   <link rel="stylesheet" href="/css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
