Weg-Knoten sind ausklappbar und standardmäßig zugeklappt.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -122,11 +122,19 @@
                   </div>
                 </td>
               </tr>
-              <tr>
-                <td>Nodes</td>
-                <td id="wayNodes"></td>
-              </tr>
             </table>
+            <div class="accordion" id="way-nodes-accordion">
+              <div class="accordion-group">
+                <div class="accordion-heading">
+                  <a class="accordion-toggle" data-toggle="collapse" href="#way-nodes-accordion-body">
+                    Nodes
+                  </a>
+                </div>
+                <div id="way-nodes-accordion-body" class="accordion-body collapse">
+                  <div id="way-nodes" class="accordion-inner"></div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
