Target in destination umbenannt.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -87,7 +87,7 @@
             </div>
             <div class="btn-group">
               <a class="btn" id="setNodeAsSource"><i class="icon-home"></i> As source</a>
-              <a class="btn" id="setNodeAsDestination"><i class="icon-flag"></i> As target</a>
+              <a class="btn" id="setNodeAsDestination"><i class="icon-flag"></i> As destination</a>
             </div>
           </div>
           <div class="well well-small">
