tab1 und tab2 in map-tab und statistics-tab umbenannt.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,8 +16,8 @@
     <div class="container-fluid">
       <span class="brand">AntScout</span>
       <ul class="nav">
-        <li class="active"><a href="#tab1" data-toggle="tab">Map</a></li>
-        <li><a href="#tab2" data-toggle="tab">Statistics</a></li>
+        <li class="active"><a href="#map-tab" data-toggle="tab">Map</a></li>
+        <li><a href="#statistics-tab" data-toggle="tab">Statistics</a></li>
       </ul>
     </div>
   </div>
@@ -28,7 +28,7 @@
     <p></p>
   </div>
   <div class="tab-content">
-    <div class="active tab-pane" id="tab1">
+    <div class="active tab-pane" id="map-tab">
       <div class="row-fluid">
         <div class="span10">
           <div id="map"></div>
@@ -143,7 +143,7 @@
         </div>
       </div>
     </div>
-    <div class="tab-pane" id="tab2">
+    <div class="tab-pane" id="statistics-tab">
       <div class="span6 well">
         <h1>Ants</h1>
         <table class="table table-bordered table-condensed table-hover table-striped">
