--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -144,62 +144,65 @@
       </div>
     </div>
     <div class="tab-pane" id="statistics-tab">
-      <div class="span6 well">
-        <h1>Ants</h1>
-        <table class="table table-bordered table-condensed table-hover table-striped">
-          <tr>
-            <th></th>
-            <th>per second</th>
-            <th>total</th>
-          </tr>
-          <tr>
-            <td>Launched</td>
-            <td id="launched-ants-per-second"></td>
-            <td id="total-launched-ants"></td>
-          </tr>
-          <tr>
-            <td>Destination reached</td>
-            <td id="destination-reached-ants-per-second"></td>
-            <td id="total-destination-reached-ants"></td>
-          </tr>
-          <tr>
-            <td>Dead end street reached</td>
-            <td id="dead-end-street-reached-ants-per-second"></td>
-            <td id="total-dead-end-street-reached-ants"></td>
-          </tr>
-          <tr>
-            <td>Max age exceeded</td>
-            <td id="max-age-exceeded-ants-per-second"></td>
-            <td id="total-max-age-exceeded-ants"></td>
-          </tr>
-        </table>
-        Mean age: <span id="ant-age"></span> s
-        <br>
-        Select next node duration: <span id="select-next-node-duration"></span> ms
-      </div>
-      <div class="span6 well">
-        <h1>Nodes</h1>
-        Launch ants duration: <span id="launch-ants-duration"></span> ms
-        <br>
-        Processed ants per second: <span id="processed-ants"></span>
-        <br>
-        Process ant duration: <span id="process-ant-duration"></span> ms
-        <br>
-        Update data structures duration: <span id="update-data-structures-duration"></span> ms
-        <div class="accordion" id="nodes-accordion">
-          <div class="accordion-group">
-            <div class="accordion-heading">
-              <a class="accordion-toggle" data-toggle="collapse" data-parent="#nodes-accordion"
-                  href="#idle-times-accordion-body">
-                Idle times
-              </a>
-            </div>
-            <div id="idle-times-accordion-body" class="accordion-body collapse">
-              <div id="idle-times" class="accordion-inner"></div>
+      <div class="row">
+        <div class="span6 well">
+          <h1>Ants</h1>
+          <table class="table table-bordered table-condensed table-hover table-striped">
+            <tr>
+              <th></th>
+              <th>per second</th>
+              <th>total</th>
+            </tr>
+            <tr>
+              <td>Launched</td>
+              <td id="launched-ants-per-second"></td>
+              <td id="total-launched-ants"></td>
+            </tr>
+            <tr>
+              <td>Destination reached</td>
+              <td id="destination-reached-ants-per-second"></td>
+              <td id="total-destination-reached-ants"></td>
+            </tr>
+            <tr>
+              <td>Dead end street reached</td>
+              <td id="dead-end-street-reached-ants-per-second"></td>
+              <td id="total-dead-end-street-reached-ants"></td>
+            </tr>
+            <tr>
+              <td>Max age exceeded</td>
+              <td id="max-age-exceeded-ants-per-second"></td>
+              <td id="total-max-age-exceeded-ants"></td>
+            </tr>
+          </table>
+          Mean age: <span id="ant-age"></span> s
+          <br>
+          Select next node duration: <span id="select-next-node-duration"></span> ms
+        </div>
+        <div class="span6 well">
+          <h1>Nodes</h1>
+          Launch ants duration: <span id="launch-ants-duration"></span> ms
+          <br>
+          Processed ants per second: <span id="processed-ants"></span>
+          <br>
+          Process ant duration: <span id="process-ant-duration"></span> ms
+          <br>
+          Update data structures duration: <span id="update-data-structures-duration"></span> ms
+          <div class="accordion" id="nodes-accordion">
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#nodes-accordion"
+                    href="#idle-times-accordion-body">
+                  Idle times
+                </a>
+              </div>
+              <div id="idle-times-accordion-body" class="accordion-body collapse">
+                <div id="idle-times" class="accordion-inner"></div>
+              </div>
             </div>
           </div>
         </div>
       </div>
+      <div class="well">Last update: <span id="last-update"></span></div>
     </div>
   </div>
 </div>
