--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -206,6 +206,7 @@
     </div>
   </div>
 </div>
+<div data-lift="AddAntScoutCometActor"></div>
 <div data-lift="AddOpenLayersActor"></div>
 <div data-lift="AddStatisticsActor"></div>
 <div data-lift="AddUserInterfaceActor"></div>
