Anzeige der durchschnittlichen Ameisen-Leerlauf-Dauer.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -176,6 +176,8 @@
           </table>
           Mean age: <span id="ant-age"></span> s
           <br>
+          Idle time: <span id="ants-idle-time"></span> ms
+          <br>
           Select next node duration: <span id="select-next-node-duration"></span> ms
         </div>
         <div class="span6 well">
