Anzeige der angekommenen Ameisen vom aktuell markierten Knoten zum aktuellen Ziel.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -66,6 +66,16 @@
             <div class="accordion" id="node-accordion">
               <div class="accordion-group">
                 <div class="accordion-heading">
+                  <a class="accordion-toggle" data-toggle="collapse" href="#arrived-ants-accordion-body">
+                    Arrived ants
+                  </a>
+                </div>
+                <div id="arrived-ants-accordion-body" class="accordion-body collapse">
+                  <div id="arrived-ants" class="accordion-inner"></div>
+                </div>
+              </div>
+              <div class="accordion-group">
+                <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse" href="#pheromones-accordion-body">
                     Pheromones
                   </a>
